--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.batch.initialize-schema=ALWAYS
 
 #==== logging slf4j =========#
-logging.level.org.springframework=DEBUG
+logging.level.org.springframework=ERROR
 logging.level.com.example.batch=DEBUG
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
 logging.file.path=logs
